[lx]first commit

--- a/XEEnglish/Base.lproj/Main.storyboard
+++ b/XEEnglish/Base.lproj/Main.storyboard
@@ -1,25 +1,169 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="vUb-JV-PH6">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="ufC-wZ-h7g">
+        <!--Tab Bar Controller-->
+        <scene sceneID="tDX-jZ-jVL">
             <objects>
-                <viewController id="vXZ-lx-hvc" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
+                <tabBarController id="vUb-JV-PH6" sceneMemberID="viewController">
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="ekC-S1-xQt">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="eDA-M7-wFU" kind="relationship" relationship="viewControllers" id="uVs-Ci-7m4"/>
+                        <segue destination="AHn-xM-Neg" kind="relationship" relationship="viewControllers" id="yrX-xI-262"/>
+                        <segue destination="mJd-rJ-v4M" kind="relationship" relationship="viewControllers" id="xm4-yW-RkE"/>
+                        <segue destination="iK0-nU-Wu6" kind="relationship" relationship="viewControllers" id="y0n-GV-CsC"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Lk0-LK-a0A" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-1215" y="320"/>
+        </scene>
+        <!--我的-->
+        <scene sceneID="YyI-WO-oUu">
+            <objects>
+                <navigationController id="iK0-nU-Wu6" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="我的" image="tab_setting.png" id="Q4X-ME-DaR"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="9XL-sr-HPt">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="Q56-l8-Lhv" kind="relationship" relationship="rootViewController" id="5Og-Xu-Wf9"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="v6l-vO-PE1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-707" y="1352"/>
+        </scene>
+        <!--我的-->
+        <scene sceneID="RNt-Nc-xr2">
+            <objects>
+                <viewController id="Q56-l8-Lhv" customClass="SettingVC" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Y1H-ab-jFN">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="我的" id="SoS-xp-i22"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mG5-qw-fM0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-223" y="1372"/>
+        </scene>
+        <!--活动-->
+        <scene sceneID="coI-YM-KOS">
+            <objects>
+                <navigationController id="mJd-rJ-v4M" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="活动" image="tab_activity.png" id="LtT-rF-kXn"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ZvO-OB-GRq">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="gJI-7l-VqI" kind="relationship" relationship="rootViewController" id="3Px-Vh-Mbd"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c2d-gC-Y31" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-691" y="646"/>
+        </scene>
+        <!--活动-->
+        <scene sceneID="bWa-Y7-5GN">
+            <objects>
+                <viewController id="gJI-7l-VqI" customClass="ActivityVC" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3bp-lk-Hhf">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="活动" id="bv2-sJ-PIP"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vSz-hk-0wU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-255" y="668"/>
+        </scene>
+        <!--课表-->
+        <scene sceneID="eFQ-Iu-OdT">
+            <objects>
+                <navigationController id="AHn-xM-Neg" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="课表" image="tab_course.png" id="Jjd-N2-XMk"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="JhT-Vs-nVh">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="9bG-Yo-1GE" kind="relationship" relationship="rootViewController" id="gUo-OA-Xdn"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JBb-2G-iId" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-697" y="-28"/>
+        </scene>
+        <!--课表-->
+        <scene sceneID="Mjh-u3-6mH">
+            <objects>
+                <viewController id="9bG-Yo-1GE" customClass="CourseVC" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="cgs-kQ-zy5">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="课表" id="Gbj-LM-rLU"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gir-zY-X4k" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-271" y="-20"/>
+        </scene>
+        <!--课程-->
+        <scene sceneID="le2-cx-Yzg">
+            <objects>
+                <viewController id="WIh-pA-BMR" customClass="HomeVC" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="z1x-3w-zHZ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="课程" id="Mwj-Ic-d36"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uW8-Cr-jN6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-271" y="-702"/>
+        </scene>
+        <!--首页-->
+        <scene sceneID="fS2-Zd-t4l">
+            <objects>
+                <navigationController id="eDA-M7-wFU" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="首页" image="tab_home.png" id="loU-bg-jTr"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="7yb-Kl-yAP">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="WIh-pA-BMR" kind="relationship" relationship="rootViewController" id="SGJ-PA-G6G"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="iSR-5o-HSw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-697" y="-686"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="tab_activity.png" width="20" height="19"/>
+        <image name="tab_course.png" width="20" height="19"/>
+        <image name="tab_home.png" width="20" height="19"/>
+        <image name="tab_setting.png" width="20" height="19"/>
+    </resources>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4"/>
+    </simulatedMetricsContainer>
 </document>
