[wang]添加意见返回的界面

--- a/XEEnglish/ExpendCalss/Login/PhoneLoginVC.xib
+++ b/XEEnglish/ExpendCalss/Login/PhoneLoginVC.xib
@@ -56,7 +56,7 @@
                     </connections>
                 </textField>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
             <point key="canvasLocation" x="413" y="303"/>
         </view>
     </objects>
