--- a/XEEnglish/ExpendCalss/Login/LoginVC.xib
+++ b/XEEnglish/ExpendCalss/Login/LoginVC.xib
@@ -72,7 +72,7 @@
                     </connections>
                 </button>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
             <point key="canvasLocation" x="305" y="312"/>
         </view>
     </objects>
