--- a/XEEnglish/ExpendCalss/Setting/SettingBirthdayVC.xib
+++ b/XEEnglish/ExpendCalss/Setting/SettingBirthdayVC.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14C2043" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14C2043" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SettingBirthdayVC">
@@ -16,7 +16,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="70y-f9-gUi">
+                <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="70y-f9-gUi">
                     <rect key="frame" x="10" y="310" width="300" height="40"/>
                     <color key="backgroundColor" red="1" green="0.48263922009999999" blue="0.1546600128" alpha="1" colorSpace="calibratedRGB"/>
                     <fontDescription key="fontDescription" type="system" pointSize="19"/>
@@ -28,9 +28,8 @@
                         <action selector="keepBtn:" destination="-1" eventType="touchUpInside" id="cxs-UO-YKK"/>
                     </connections>
                 </button>
-                <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="8ce-1W-z6S">
+                <datePicker contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="8ce-1W-z6S">
                     <rect key="frame" x="0.0" y="90" width="320" height="200"/>
-                    <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
                     <date key="date" timeIntervalSinceReferenceDate="454503887.28605998">
                         <!--2015-05-28 11:04:47 +0000-->
                     </date>
@@ -39,6 +38,16 @@
                     </connections>
                 </datePicker>
             </subviews>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="70y-f9-gUi" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="Ovx-Tn-XCX"/>
+                <constraint firstAttribute="trailing" secondItem="8ce-1W-z6S" secondAttribute="trailing" id="PVd-HL-CfV"/>
+                <constraint firstItem="70y-f9-gUi" firstAttribute="top" secondItem="8ce-1W-z6S" secondAttribute="bottom" constant="20" id="f14-VX-Fnj"/>
+                <constraint firstItem="8ce-1W-z6S" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ovZ-TL-h40"/>
+                <constraint firstAttribute="trailing" secondItem="70y-f9-gUi" secondAttribute="trailing" constant="10" id="qTA-Js-B45"/>
+                <constraint firstAttribute="bottom" secondItem="70y-f9-gUi" secondAttribute="bottom" constant="218" id="qc6-oA-ujt"/>
+                <constraint firstItem="8ce-1W-z6S" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="90" id="tVE-BO-poW"/>
+            </constraints>
             <point key="canvasLocation" x="389" y="304"/>
         </view>
     </objects>
